Setup base project structure.
